examples/errors/syntax_missing_paren_open.jc
// ================================================
// ERROR: Missing Opening Parenthesis
// Expected: [SyntaxError] Expected '(' after 'say'
// ================================================

// Missing the opening parenthesis
say "Hello");
